RESOLVED FIXED209348
Fix name of "X-Content-Type:" HTTP header in console logging
https://bugs.webkit.org/show_bug.cgi?id=209348
Summary Fix name of "X-Content-Type:" HTTP header in console logging
David Kilzer (:ddkilzer)
Reported 2020-03-20 10:20:39 PDT
Fix name of "X-Content-Type:" HTTP header in console logging that appears in Web Inspector. The HTTP header is "X-Content-Type-Options:", but the log messages all use "X-Content-Type:" currently.
Attachments
Patch v1 (11.58 KB, patch)
2020-03-20 10:27 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2020-03-20 10:27:07 PDT
Created attachment 394098 [details] Patch v1
Devin Rousso
Comment 2 2020-03-20 10:30:11 PDT
Comment on attachment 394098 [details] Patch v1 r=mews
EWS
Comment 3 2020-03-20 14:21:09 PDT
Committed r258789: <https://trac.webkit.org/changeset/258789> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394098 [details].
Radar WebKit Bug Importer
Comment 4 2020-03-20 14:22:14 PDT
Note You need to log in before you can comment on or make changes to this bug.