Fix name of "X-Content-Type:" HTTP header in console logging <https://webkit.org/b/209348>

Reviewed by Devin Rousso.

Source/WebCore:

* css/StyleSheetContents.cpp:
(WebCore::StyleSheetContents::parseAuthorStyleSheet):
* dom/LoadableClassicScript.cpp:
(WebCore::LoadableClassicScript::notifyFinished):
* workers/WorkerScriptLoader.cpp:
(WebCore::WorkerScriptLoader::validateWorkerResponse):
- Change "X-Content-Type:" to "X-Content-Type-Options:" to fix
  the name of the header.

LayoutTests:

* http/tests/security/contentTypeOptions/nosniff-dynamic-script-blocked-expected.txt:
* http/tests/security/contentTypeOptions/nosniff-script-blocked-expected.txt:
* http/tests/security/contentTypeOptions/nosniff-script-without-content-type-blocked-expected.txt:
- Update test results for the correct name of the header:
  "X-Content-Type-Options:".


Canonical link: https://commits.webkit.org/222294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258789 268f45cc-cd09-0410-ab3c-d52691b4dbfc